# MOTIONSPDZ

./: CMakeLists.txt
fbs/: CMakeLists.txt
src/motioncore/: CMakeLists.txt
src/motioncore/multiplication_triple/: mt_provider.cpp  mt_provider.h  sp_provider.cpp  sp_provider.h
src/motioncore/oblivious_transfer/: ot_flavors.cpp  ot_flavors.h  ot_provider.h
src/motioncore/statistics/: analysis.cpp
src/motioncore/utility/: config.h  constants.h
src/test/: CMakeLists.txt  test_spdz.cpp  test_spdz2.cpp
