# Ενσωμάτωση του Motion Library
add_library(motion
    algorithm/algorithm_description.cpp
    algorithm/boolean_algorithms.cpp
    algorithm/low_depth_reduce.h
    base/backend.cpp
    base/configuration.cpp
    base/motion_base_provider.cpp
    base/party.cpp
    base/register.cpp
    communication/communication_layer.cpp
    communication/dummy_transport.cpp
    communication/garbled_circuit_message.cpp
    communication/hello_message.cpp
    communication/message.cpp
    communication/message_manager.cpp
    communication/tcp_transport.cpp
    communication/transport.cpp
    executor/gate_executor.cpp
    multiplication_triple/mt_provider.cpp
    multiplication_triple/sb_provider.cpp
    multiplication_triple/sp_provider.cpp
    oblivious_transfer/base_ots/base_ot_provider.cpp
    oblivious_transfer/base_ots/ot_hl17.cpp
    oblivious_transfer/1_out_of_n/kk13_ot_flavors.cpp
    oblivious_transfer/1_out_of_n/kk13_ot_provider.cpp
    oblivious_transfer/ot_flavors.cpp
    oblivious_transfer/ot_provider.cpp
    primitives/aes/aesni_primitives.cpp
    primitives/blake2b.cpp
    primitives/curve25519/mycurve25519.cpp
    primitives/pseudo_random_generator.cpp
    primitives/sharing_randomness_generator.cpp
    primitives/random/aes128_ctr_rng.cpp
    primitives/random/openssl_rng.cpp
    protocols/arithmetic_gmw/arithmetic_gmw_gate.cpp
    protocols/arithmetic_gmw/arithmetic_gmw_share.cpp
    protocols/arithmetic_gmw/arithmetic_gmw_wire.cpp
    protocols/astra/astra_gate.cpp
    protocols/astra/astra_wire.cpp
    protocols/astra/astra_share.cpp
    protocols/bmr/bmr_gate.cpp
    protocols/bmr/bmr_provider.cpp
    protocols/bmr/bmr_share.cpp
    protocols/bmr/bmr_wire.cpp
    protocols/boolean_gmw/boolean_gmw_gate.cpp
    protocols/boolean_gmw/boolean_gmw_share.cpp
    protocols/boolean_gmw/boolean_gmw_wire.cpp
    protocols/constant/constant_gate.cpp
    protocols/constant/constant_share.cpp
    protocols/constant/constant_wire.cpp
    protocols/conversion/conversion_gate.cpp
    protocols/data_management/simdify_gate.cpp
    protocols/data_management/subset_gate.cpp
    protocols/data_management/unsimdify_gate.cpp
    protocols/garbled_circuit/garbled_circuit_gate.cpp
    protocols/garbled_circuit/garbled_circuit_provider.cpp
    protocols/garbled_circuit/garbled_circuit_share.cpp
    protocols/garbled_circuit/garbled_circuit_wire.cpp
    protocols/gate.cpp
    protocols/share.cpp
    protocols/share_wrapper.cpp
    protocols/wire.cpp
    secure_type/secure_signed_integer.cpp
    secure_type/secure_unsigned_integer.cpp
    statistics/analysis.cpp
    statistics/run_time_statistics.cpp
    utility/bit_matrix.cpp
    utility/bit_vector.cpp
    utility/block.cpp
    utility/condition.cpp
    utility/fiber_waitable.cpp
    utility/fiber_thread_pool/fiber_thread_pool.cpp
    utility/fiber_thread_pool/pooled_work_stealing.cpp
    utility/helpers.cpp
    utility/logger.cpp
    utility/runtime_info.cpp
    utility/thread.cpp
)

add_library(MOTION::motion ALIAS motion)

# Προσθήκη GoogleTest
set(GTEST_SOURCE_DIR "/home/micho/libraries/googletest")

# Εισαγωγή του GoogleTest στο project
if(EXISTS ${GTEST_SOURCE_DIR})
    add_subdirectory(${GTEST_SOURCE_DIR} ${CMAKE_BINARY_DIR}/googletest-build)
    include_directories(${GTEST_SOURCE_DIR}/googletest/include)
    include_directories(${GTEST_SOURCE_DIR}/googlemock/include)
else()
    message(FATAL_ERROR "GoogleTest directory not found: ${GTEST_SOURCE_DIR}")
endif()



# Ρυθμίσεις Build
set_property(TARGET motion PROPERTY POSITION_INDEPENDENT_CODE ON)

target_compile_features(motion PUBLIC cxx_std_20)
target_compile_options(motion PRIVATE
    -Wall -Wextra
    -pedantic
    -maes -msse2 -msse4.1 -msse4.2 -mpclmul
    -ffunction-sections -march=native -ffast-math
)

# Σύνδεση Boost και άλλων απαραίτητων βιβλιοθηκών
target_link_libraries(motion
    PRIVATE
        fmt::fmt
        Boost::context
        Boost::fiber
        Boost::log_setup
        Boost::log
        Boost::filesystem
        Boost::system
        Boost::thread
        OpenMP::OpenMP_CXX
        Threads::Threads
        OpenSSL::Crypto
        OpenSSL::SSL
    PUBLIC
        Boost::json
)
target_compile_definitions(motion PUBLIC FMT_HEADER_ONLY)

# Include Directories
target_include_directories(motion PUBLIC
    $<INSTALL_INTERFACE:include>
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
    $<BUILD_INTERFACE:${MOTION_ROOT_DIR}/src/motioncore>
    $<BUILD_INTERFACE:${MOTION_ROOT_DIR}/extern>
    $<BUILD_INTERFACE:${MOTION_ROOT_DIR}/extern/fmt/include>
    $<BUILD_INTERFACE:${MOTION_ROOT_DIR}/extern/flatbuffers/include>
    $<BUILD_INTERFACE:${Boost_INCLUDE_DIRS}>
)

# Εγκατάσταση βιβλιοθηκών και targets
install(TARGETS motion
    EXPORT "${PROJECT_NAME}Targets"
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    INCLUDES DESTINATION lib
)

install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
    DESTINATION include
    FILES_MATCHING PATTERN "*.h"
)

